# src/app/openapi/openapi-gen/model/contact.ts
@@ -3,7 +3,7 @@
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: @springdoc.version@
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -16,16 +16,10 @@ import { ContactGroup } from './contactGroup';
 import { ContactRelation } from './contactRelation';
 
 
-export interface Contact {
+export interface Contact { 
     id?: number;
-    /**
-     * The photo of the contact
-     */
-    photo?: string;
-    /**
-     * The thumbnail of the contact
-     */
-    thumbNail?: string;
+    photo?: Array<string>;
+    thumbNail?: Array<string>;
     photoContentType?: string;
     firstName?: string;
     middleName?: string;
@@ -33,6 +27,7 @@ export interface Contact {
     company?: string;
     birthDate?: string;
     notes?: string;
+    contactUrl?: string;
     phones?: Set<Phone>;
     addresses?: Set<Address>;
     emails?: Set<Email>;
