# src/app/openapi/openapi-gen/model/contactViewList.ts
@@ -3,7 +3,7 @@
  * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
  *
  * The version of the OpenAPI document: @springdoc.version@
- *
+ * 
  *
  * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
  * https://openapi-generator.tech
@@ -11,7 +11,7 @@
  */
 
 
-export interface ContactViewList {
+export interface ContactViewList { 
     /**
      * Aggregated information: company name, lastname, firstname
      */
@@ -20,18 +20,6 @@ export interface ContactViewList {
      * The id of the contact
      */
     id?: number;
-    /**
-     * The thumbnail of the contact
-     */
-    thumbNail?: string;
-    /**
-     * Aggregated group id\'s
-     */
-    groupsIdAggregate?: string;
-    /**
-     * Aggregated relations id\'s
-     */
-    relationsIdAggregate?: string;
     /**
      * The birth date of the contact
      */
@@ -48,6 +36,18 @@ export interface ContactViewList {
      * Aggregated email addresses
      */
     emailsAggregate?: string;
+    /**
+     * The thumbnail of the contact
+     */
+    thumbNail?: Blob;
+    /**
+     * Aggregated group id\'s
+     */
+    groupsIdAggregate?: string;
+    /**
+     * Aggregated relations id\'s
+     */
+    relationsIdAggregate?: string;
     /**
      * The last or surname name of the contact
      */
